--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <div class="row">
              <div class="col-xl-12">
                  <img src="./img/Showcase.png" id="showcase" alt="">
-
+                 <img src="./img/carrito (1).png" id="carrito" alt="">
 
               </div>
 
