--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Document</title>
 </head>
@@ -14,8 +14,96 @@
              <div class="col-xl-12">
                  <img src="./img/Showcase.png" id="showcase" alt="">
                  <img src="./img/carrito (1).png" id="carrito" alt="">
-
               </div>
+
+
+
+              <div class="container-sm">
+                <div class="row row-cols-2 row-cols-sm-5 g-2 g-sm-3">
+                  <div class="col">
+                    <div class="p-4 border milk">
+                        <img src="./img/milk.png" id="MILK1" alt="">
+                        <img src="./img/milk.png" id="MILK2" alt="">
+                        <img src="./img/milk.png" id="MILK3" alt="">
+                        <img src="./img/milk.png" id="MILK4" alt="">
+                        <img src="./img/milk.png" id="MILK5" alt="">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border ">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border ">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border ">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border">Row column</div>
+                  </div>
+                </div>
+              </div>
+
+              <br><br><br>
+
+
+              <div class="container">
+                <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                  <div class="col">
+                    <div class="p-3 border bg-light">Row column</div>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
+
+
+
 
       </div>
     </div>
