agregando las images de soda

--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border">Row 2column</div>
+                    <div class="p-4  Soda">
+                        <img src="./img/soda (1).png" id="soda1" alt="">
+                        <img src="./img/soda (1).png" id="soda2" alt="">
+                        <img src="./img/soda (1).png" id="soda3" alt="">
+                        <img src="./img/soda (1).png" id="soda4" alt="">
+                        <img src="./img/soda (1).png" id="soda5" alt="">
+                        <img src="./img/soda (1).png" id="soda6" alt="">
+                        
+                    </div>
                   </div>
                   <div class="col">
                     <div class="p-3 border">Row column</div>
