agregando las imagenes de SodaLima y su ubicacion en css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="row row-cols-2 row-cols-sm-5 g-2 g-sm-3">
                   <div class="col">
-                    <div class="p-4 milk">
+                    <div class="p-3 milk">
                         <img src="./img/milk.png" id="MILK1" alt="">
                         <img src="./img/milk.png" id="MILK2" alt="">
                         <img src="./img/milk.png" id="MILK3" alt="">
@@ -32,7 +32,7 @@
 
                   </div>
                   <div class="col">
-                    <div class="p-4 Pasta ">
+                    <div class="p-3 Pasta ">
                      <img src="./img/pasta.png" id="pasta1" alt="">
                      <img src="./img/pasta.png" id="pasta2" alt="">
                      <img src="./img/pasta.png" id="pasta3" alt="">
@@ -43,7 +43,7 @@
                   </div>
 
                   <div class="col">
-                    <div class="p-4 Queso">
+                    <div class="p-3 Queso">
                         <img src="./img/queso.png" id="queso1" alt="">
                         <img src="./img/queso.png" id="queso2" alt="">
                         <img src="./img/queso.png" id="queso3" alt="">
@@ -52,18 +52,26 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4  Soda">
-                        <img src="./img/soda (1).png" id="soda1" alt="">
+                    <div class="p-3  Soda">
+                        <img src="./img/soda (1).png" id="soda1" alt="" data- precio="">
                         <img src="./img/soda (1).png" id="soda2" alt="">
                         <img src="./img/soda (1).png" id="soda3" alt="">
                         <img src="./img/soda (1).png" id="soda4" alt="">
                         <img src="./img/soda (1).png" id="soda5" alt="">
                         <img src="./img/soda (1).png" id="soda6" alt="">
-                        
                     </div>
                   </div>
+                  
                   <div class="col">
-                    <div class="p-3 border">Row column</div>
+                    <div class="p-3 border SodaLima">
+                        <img src="./img/soft-drink.png" id="sodaLima2" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima1" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima3" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima4" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima5" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima6" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima7" alt="">
+                    </div>
                   </div>
                   <div class="col">
                     <div class="p-3 border">Row column</div>
