agregando la imagenes de Mermelada de fresa y su ubicacion en css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   </div>
                   
                   <div class="col">
-                    <div class="p-3 border SodaLima">
+                    <div class="p-3 SodaLima">
                         <img src="./img/soft-drink.png" id="sodaLima2" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima1" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima3" alt="">
@@ -74,7 +74,13 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border">Row column</div>
+                    <div class="p-3 Mermelada">
+                        <img src="/img/mermelada.png" id="mermelada1" alt="">
+                        <img src="/img/mermelada.png" id="mermelada2" alt="">
+                        <img src="/img/mermelada.png" id="mermelada3" alt="">
+                        <img src="/img/mermelada.png" id="mermelada4" alt="">
+                        <img src="/img/mermelada.png" id="mermelada5" alt="">
+                    </div>
                   </div>
                   <div class="col">
                     <div class="p-3 border">Row column</div>
