Agregando a las estanterias  Agua u colocandolo en su lugar con css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="row row-cols-2 row-cols-sm-5 g-2 g-sm-3">
                   <div class="col">
-                    <div class="p-3 milk">
+                    <div class="p-4 milk">
                         <img src="./img/milk.png" id="MILK1" alt="">
                         <img src="./img/milk.png" id="MILK2" alt="">
                         <img src="./img/milk.png" id="MILK3" alt="">
@@ -32,7 +32,7 @@
 
                   </div>
                   <div class="col">
-                    <div class="p-3 Pasta ">
+                    <div class="p-4 Pasta ">
                      <img src="./img/pasta.png" id="pasta1" alt="">
                      <img src="./img/pasta.png" id="pasta2" alt="">
                      <img src="./img/pasta.png" id="pasta3" alt="">
@@ -43,7 +43,7 @@
                   </div>
 
                   <div class="col">
-                    <div class="p-3 Queso">
+                    <div class="p-4 Queso">
                         <img src="./img/queso.png" id="queso1" alt="">
                         <img src="./img/queso.png" id="queso2" alt="">
                         <img src="./img/queso.png" id="queso3" alt="">
@@ -52,7 +52,7 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-3  Soda">
+                    <div class="p-4  Soda">
                         <img src="./img/soda (1).png" id="soda1" alt="" data- precio="">
                         <img src="./img/soda (1).png" id="soda2" alt="">
                         <img src="./img/soda (1).png" id="soda3" alt="">
@@ -63,7 +63,7 @@
                   </div>
                   
                   <div class="col">
-                    <div class="p-3 SodaLima">
+                    <div class="p-4 SodaLima">
                         <img src="./img/soft-drink.png" id="sodaLima2" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima1" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima3" alt="">
@@ -74,7 +74,7 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-3 Mermelada">
+                    <div class="p-4 Mermelada">
                         <img src="/img/mermelada.png" id="mermelada1" alt="">
                         <img src="/img/mermelada.png" id="mermelada2" alt="">
                         <img src="/img/mermelada.png" id="mermelada3" alt="">
@@ -83,7 +83,14 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border">Row column</div>
+                    <div class="p-4 border Agua">
+                        <img src="./img/agua.png" id="agua1" alt="">
+                        <img src="./img/agua.png" id="agua2" alt="">
+                        <img src="./img/agua.png" id="agua3" alt="">
+                        <img src="./img/agua.png" id="agua4" alt="">
+                        <img src="./img/agua.png" id="agua5" alt="">
+                        <img src="./img/agua.png" id="agua6" alt="">
+                    </div>
                   </div>
                   <div class="col">
                     <div class="p-3 border">Row column</div>
