Agregando las imagenes de  Chips y su css

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                   
                   <div class="col">
                     <div class="p-4 SodaLima">
-                        <img src="./img/soft-drink.png" id="sodaLima2" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima1" alt="">
+                        <img src="./img/soft-drink.png" id="sodaLima2" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima3" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima4" alt="">
                         <img src="./img/soft-drink.png" id="sodaLima5" alt="">
@@ -83,7 +83,7 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border Agua">
+                    <div class="p-4 Agua">
                         <img src="./img/agua.png" id="agua1" alt="">
                         <img src="./img/agua.png" id="agua2" alt="">
                         <img src="./img/agua.png" id="agua3" alt="">
@@ -93,7 +93,12 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border">Row column</div>
+                    <div class="p-4  Chips ">
+                        <img src="./img/chips.png" id="chips1" alt="">
+                        <img src="./img/chips.png" id="chips2" alt="">
+                        <img src="./img/chips.png" id="chips3" alt="">
+                        <img src="./img/chips.png" id="chips4" alt="">
+                    </div>
                   </div>
 
                 </div>
