--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
               <div class="container-md">
 
-                <div class="row row-cols-2 row-cols-sm-5 g-2 g-sm-3">
+                <div class="row row-cols-4 row-cols-lg-4 g-4 g-lg-4">
                   <div class="col">
                     <div class="p-4 milk">
                         <img src="./img/milk.png" id="MILK1" alt="">
@@ -107,38 +107,31 @@
 
 
               <div class="container">
-                <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+                <div class="row row-cols-4 row-cols-lg-4 g-4 g-lg-4">
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 borderChocolate ">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
                   <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">Row column</div>
                   </div>
-                  <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-3 border bg-light">Row column</div>
-                  </div>
-                </div>
               </div>
 
 
