agregando chocolate  barra de pan y zumo de naranja  con su css

--- a/index.html
+++ b/index.html
@@ -109,13 +109,30 @@
               <div class="container">
                 <div class="row row-cols-4 row-cols-lg-4 g-4 g-lg-4">
                   <div class="col">
-                    <div class="p-4 borderChocolate ">Row column</div>
+                    <div class="p-4 Chocolate ">
+                        <img src="./img/chocolate-bar.png" id="chocolate1" alt="">
+                        <img src="./img/chocolate-bar.png" id="chocolate2" alt="">
+                        <img src="./img/chocolate-bar.png" id="chocolate3" alt="">
+                        <img src="./img/chocolate-bar.png" id="chocolate4" alt="">
+                        <img src="./img/chocolate-bar.png" id="chocolate5" alt="">
+                    </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
+                    <div class="p-4  Pan">
+                        <img src="./img/un-pan.png" id="pan1" alt="">
+                        <img src="./img/un-pan.png" id="pan2" alt="">
+                        <img src="./img/un-pan.png" id="pan3" alt="">
+                        <img src="./img/un-pan.png" id="pan4" alt="">
+                    </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
+                    <div class="p-4 border ZumoNaranja">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja1" alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja2" alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja3" alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja4" alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja5" alt="">
+                    </div>
                   </div>
                   <div class="col">
                     <div class="p-4 border bg-light">Row column</div>
