agregando las imagenes de Zumo de naranaja

--- a/index.html
+++ b/index.html
@@ -126,16 +126,17 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border ZumoNaranja">
+                    <div class="p-4  ZumoNaranja">
                         <img src="./img/ZumoNaranja.png" id="zumoNaranja1" alt="">
                         <img src="./img/ZumoNaranja.png" id="zumoNaranja2" alt="">
                         <img src="./img/ZumoNaranja.png" id="zumoNaranja3" alt="">
                         <img src="./img/ZumoNaranja.png" id="zumoNaranja4" alt="">
-                        <img src="./img/ZumoNaranja.png" id="zumoNaranja5" alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
+                    <div class="p-4 border Snack">
+                        
+                    </div>
                   </div>
                   <div class="col">
                     <div class="p-4 border bg-light">Row column</div>
