agregando la imagen de caja d emadrea y agregando las iamagnes de snacks y su css

--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border Snack">
-                        
+                    <div class="p-4  Snack">
+                        <img src="./img/snack.png" id="snack1" alt="">
+                        <img src="./img/snack.png" id="snack2" alt="">
+                        <img src="./img/snack.png" id="snack3" alt="">
+                        <img src="./img/snack.png" id="snack4" alt="">
                     </div>
                   </div>
                   <div class="col">
