Agregando las imagenes de Lechuga y Tomate y sus ubicaciones ne css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
              <div class="col-xl-12">
                  <img src="./img/Showcase.png" id="showcase" alt="">
                  <img src="./img/carrito (1).png" id="carrito" alt="">
+                 
               </div>
 
 
@@ -142,16 +143,41 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
+                    <div class="p-4  Tomato"> 
+                    <img src="./img/tomato.png" id="tomato1" alt="">
+                    <img src="./img/tomato.png" id="tomato2" alt="">
+                    <img src="./img/tomato.png" id="tomato3" alt="">
+                    <img src="./img/tomato.png" id="tomato4" alt="">
+                    <img src="./img/tomato.png" id="tomato5" alt="">
+                    </div>
+                    <img src="./img/caja de madera (1).png"  id="cajaM1" alt="">
+                  </div>
+
+
+                  <div class="col">
+                    <div class="p-4 border Lechuga">
+                        <img src="./img/lechuga.png" id="lechuga1" alt="">
+                        <img src="./img/lechuga.png" id="lechuga2" alt="">
+                        <img src="./img/lechuga.png" id="lechuga3" alt="">
+                        <img src="./img/lechuga.png" id="lechuga4"alt="">
+
+
+                    </div>
+                    <img src="./img/caja de madera (1).png" id="cajaM2" alt="">
                   </div>
                   <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">
+
+
+                    </div>
+                    <img src="./img/caja de madera (1).png" id="cajaM3" alt="">
                   </div>
                   <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
-                  </div>
-                  <div class="col">
-                    <div class="p-4 border bg-light">Row column</div>
+                    <div class="p-4 border bg-light">
+
+
+                    </div>
+                    <img src="./img/caja de madera (1).png" id="cajaM4" alt="">
                   </div>
               </div>
 
