Agregando las imagenes de la  Lechuga

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                         <img src="./img/lechuga.png" id="lechuga2" alt="">
                         <img src="./img/lechuga.png" id="lechuga3" alt="">
                         <img src="./img/lechuga.png" id="lechuga4"alt="">
+                        <img src="./img/lechuga.png" id="lechuga5"alt="">
 
 
                     </div>
