agregando las imagenes de platano y  css

--- a/index.html
+++ b/index.html
@@ -155,27 +155,38 @@
 
 
                   <div class="col">
-                    <div class="p-4 border Lechuga">
+                    <div class="p-4 Lechuga">
                         <img src="./img/lechuga.png" id="lechuga1" alt="">
                         <img src="./img/lechuga.png" id="lechuga2" alt="">
                         <img src="./img/lechuga.png" id="lechuga3" alt="">
                         <img src="./img/lechuga.png" id="lechuga4"alt="">
                         <img src="./img/lechuga.png" id="lechuga5"alt="">
-
-
                     </div>
                     <img src="./img/caja de madera (1).png" id="cajaM2" alt="">
                   </div>
+
+
                   <div class="col">
-                    <div class="p-4 border bg-light">
-
-
+                    <div class="p-4  Berenjena">
+                     <img src=".//img/eggplant.png" id="berenjena1" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena2" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena3" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena4" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena5" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena6" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena6" alt="">
+                     <img src=".//img/eggplant.png" id="berenjena7" alt="">
                     </div>
                     <img src="./img/caja de madera (1).png" id="cajaM3" alt="">
                   </div>
-                  <div class="col">
-                    <div class="p-4 border bg-light">
 
+                  <div class="col">
+                    <div class="p-4 border Platano">
+                    <img src="./img/platano (1).png" id="platano1" alt="">
+                    <img src="./img/platano (1).png" id="platano2" alt="">
+                    <img src="./img/platano (1).png" id="platano3" alt="">
+                    <img src="./img/platano (1).png" id="platano4" alt="">
+                    <img src="./img/platano (1).png" id="platano5" alt="">
 
                     </div>
                     <img src="./img/caja de madera (1).png" id="cajaM4" alt="">
