creando lso class name para el llamado con JS

--- a/index.html
+++ b/index.html
@@ -19,87 +19,87 @@
 
 
 
-              <div class="container-md">
+              <div class="container-md" ondragstart="drag(event)" ondrop="drop(event)" ondragover="allowDrop(event)">
                   <h1 id="Titulo">C.R.Q.M MARKET</h1>
 
                 <div class="row row-cols-4 row-cols-lg-4 g-4 g-lg-4">
-                  <div class="col">
-                    <div class="p-4 milk">
-                        <img src="./img/milk.png" id="MILK1" alt="">
-                        <img src="./img/milk.png" id="MILK2" alt="">
-                        <img src="./img/milk.png" id="MILK3" alt="">
-                        <img src="./img/milk.png" id="MILK4" alt="">
-                        <img src="./img/milk.png" id="MILK5" alt="">
+                  <div class="col" >
+                    <div  class="p-4 milk" draggable="true" >
+                        <img src="./img/milk.png"  id="MILK1" class='compra leche' alt="">
+                        <img src="./img/milk.png"  id="MILK2" class='compra leche' alt="">
+                        <img src="./img/milk.png"  id="MILK3" class='compra leche' alt="">
+                        <img src="./img/milk.png"  id="MILK4" class='compra leche' alt="">
+                        <img src="./img/milk.png"  id="MILK5" class='compra leche' alt="">
                     </div>
 
                   </div>
                   <div class="col">
-                    <div class="p-4 Pasta ">
-                     <img src="./img/pasta.png" id="pasta1" alt="">
-                     <img src="./img/pasta.png" id="pasta2" alt="">
-                     <img src="./img/pasta.png" id="pasta3" alt="">
-                     <img src="./img/pasta.png" id="pasta4" alt="">
-                     <img src="./img/pasta.png" id="pasta5" alt="">
-                     <img src="./img/pasta.png" id="pasta6" alt="">
+                    <div class="p-4 Pasta " draggable="true">
+                     <img src="./img/pasta.png" id="pasta1" class='compra pasta' alt="">
+                     <img src="./img/pasta.png" id="pasta2" class='compra pasta' alt="">
+                     <img src="./img/pasta.png" id="pasta3" class='compra pasta' alt="">
+                     <img src="./img/pasta.png" id="pasta4" class='compra pasta' alt="">
+                     <img src="./img/pasta.png" id="pasta5" class='compra pasta' alt="">
+                     <img src="./img/pasta.png" id="pasta6" class='compra pasta' alt="">
                     </div>
                   </div>
 
                   <div class="col">
-                    <div class="p-4 Queso">
-                        <img src="./img/queso.png" id="queso1" alt="">
-                        <img src="./img/queso.png" id="queso2" alt="">
-                        <img src="./img/queso.png" id="queso3" alt="">
-                        <img src="./img/queso.png" id="queso4" alt="">
-                        <img src="./img/queso.png" id="queso5" alt="">
+                    <div class="p-4 Queso" draggable="true">
+                        <img src="./img/queso.png" id="queso1" class='compra queso' alt="">
+                        <img src="./img/queso.png" id="queso2" class='compra queso' alt="">
+                        <img src="./img/queso.png" id="queso3" class='compra queso' alt="">
+                        <img src="./img/queso.png" id="queso4" class='compra queso' alt="">
+                        <img src="./img/queso.png" id="queso5" class='compra queso' alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4  Soda">
-                        <img src="./img/soda (1).png" id="soda1" alt="" data- precio="">
-                        <img src="./img/soda (1).png" id="soda2" alt="">
-                        <img src="./img/soda (1).png" id="soda3" alt="">
-                        <img src="./img/soda (1).png" id="soda4" alt="">
-                        <img src="./img/soda (1).png" id="soda5" alt="">
-                        <img src="./img/soda (1).png" id="soda6" alt="">
+                    <div class="p-4  Soda" draggable="true">
+                        <img src="./img/soda (1).png" id="soda1" class='compra soda' alt="" >
+                        <img src="./img/soda (1).png" id="soda2" class='compra soda' alt="">
+                        <img src="./img/soda (1).png" id="soda3" class='compra soda' alt="">
+                        <img src="./img/soda (1).png" id="soda4" class='compra soda' alt="">
+                        <img src="./img/soda (1).png" id="soda5" class='compra soda' alt="">
+                        <img src="./img/soda (1).png" id="soda6" class='compra soda' alt="">
                     </div>
                   </div>
                   
-                  <div class="col">
-                    <div class="p-4 SodaLima">
-                        <img src="./img/soft-drink.png" id="sodaLima1" alt="">
-                        <img src="./img/soft-drink.png" id="sodaLima2" alt="">
-                        <img src="./img/soft-drink.png" id="sodaLima3" alt="">
-                        <img src="./img/soft-drink.png" id="sodaLima4" alt="">
-                        <img src="./img/soft-drink.png" id="sodaLima5" alt="">
-                        <img src="./img/soft-drink.png" id="sodaLima6" alt="">
-                        <img src="./img/soft-drink.png" id="sodaLima7" alt="">
+                  <div class="col" >
+                    <div class="p-4 SodaLima" draggable="true">
+                       <img src="./img/soft-drink.png" id="sodaLima1" class='compra sodaLima'  alt="">
+                       <img src="./img/soft-drink.png" id="sodaLima2" class='compra sodaLima'  alt="">
+                       <img src="./img/soft-drink.png" id="sodaLima3" class='compra sodaLima'  alt="">
+                       <img src="./img/soft-drink.png" id="sodaLima4" class='compra sodaLima'  alt="">
+                       <img src="./img/soft-drink.png" id="sodaLima5" class='compra sodaLima'  alt="">
+                       <img src="./img/soft-drink.png" id="sodaLima6" class='compra sodaLima'  alt="">
+                       <img src="./img/soft-drink.png" id="sodaLima7" class='compra sodaLima'  alt="">
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col" draggable="true">
                     <div class="p-4 Mermelada">
-                        <img src="/img/mermelada.png" id="mermelada1" alt="">
-                        <img src="/img/mermelada.png" id="mermelada2" alt="">
-                        <img src="/img/mermelada.png" id="mermelada3" alt="">
-                        <img src="/img/mermelada.png" id="mermelada4" alt="">
-                        <img src="/img/mermelada.png" id="mermelada5" alt="">
+                        <img src="/img/mermelada.png" id="mermelada1" class='compra mermelada' alt="">
+                        <img src="/img/mermelada.png" id="mermelada2" class='compra mermelada' alt="">
+                        <img src="/img/mermelada.png" id="mermelada3" class='compra mermelada' alt="">
+                        <img src="/img/mermelada.png" id="mermelada4" class='compra mermelada' alt="">
+                        <img src="/img/mermelada.png" id="mermelada5" class='compra mermelada' alt="">
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col" draggable="true">
                     <div class="p-4 Agua">
-                        <img src="./img/agua.png" id="agua1" alt="">
-                        <img src="./img/agua.png" id="agua2" alt="">
-                        <img src="./img/agua.png" id="agua3" alt="">
-                        <img src="./img/agua.png" id="agua4" alt="">
-                        <img src="./img/agua.png" id="agua5" alt="">
-                        <img src="./img/agua.png" id="agua6" alt="">
+                        <img src="./img/agua.png" id="agua1" class='compra agua' alt="">
+                        <img src="./img/agua.png" id="agua2" class='compra agua' alt="">
+                        <img src="./img/agua.png" id="agua3" class='compra agua' alt="">
+                        <img src="./img/agua.png" id="agua4" class='compra agua' alt="">
+                        <img src="./img/agua.png" id="agua5" class='compra agua' alt="">
+                        <img src="./img/agua.png" id="agua6" class='compra agua' alt="">
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col" draggable="true">
                     <div class="p-4  Chips ">
-                        <img src="./img/chips.png" id="chips1" alt="">
-                        <img src="./img/chips.png" id="chips2" alt="">
-                        <img src="./img/chips.png" id="chips3" alt="">
-                        <img src="./img/chips.png" id="chips4" alt="">
+                        <img src="./img/chips.png" id="chips1" class='compra chips'  alt="">
+                        <img src="./img/chips.png" id="chips2" class='compra chips'  alt="">
+                        <img src="./img/chips.png" id="chips3" class='compra chips'  alt="">
+                        <img src="./img/chips.png" id="chips4" class='compra chips'  alt="">
                     </div>
                   </div>
 
@@ -108,90 +108,100 @@
 
 
 
-              <div class="container">
+              <div class="container" ondragstart="drag(event)" ondrop="drop(event)" ondragover="allowDrop(event)">
                 <div class="row row-cols-4 row-cols-lg-4 g-4 g-lg-4">
                   <div class="col">
-                    <div class="p-4 Chocolate ">
-                        <img src="./img/chocolate-bar.png" id="chocolate1" alt="">
-                        <img src="./img/chocolate-bar.png" id="chocolate2" alt="">
-                        <img src="./img/chocolate-bar.png" id="chocolate3" alt="">
-                        <img src="./img/chocolate-bar.png" id="chocolate4" alt="">
-                        <img src="./img/chocolate-bar.png" id="chocolate5" alt="">
+                    <div class="p-4 Chocolate " draggable="true">
+                     <img src="./img/chocolate-bar.png" id="chocolate1" class='compra chocolate'  alt="">
+                     <img src="./img/chocolate-bar.png" id="chocolate2" class='compra chocolate'  alt="">
+                     <img src="./img/chocolate-bar.png" id="chocolate3" class='compra chocolate'  alt="">
+                     <img src="./img/chocolate-bar.png" id="chocolate4" class='compra chocolate'  alt="">
+                     <img src="./img/chocolate-bar.png" id="chocolate5" class='compra chocolate'  alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4  Pan">
-                        <img src="./img/un-pan.png" id="pan1" alt="">
-                        <img src="./img/un-pan.png" id="pan2" alt="">
-                        <img src="./img/un-pan.png" id="pan3" alt="">
-                        <img src="./img/un-pan.png" id="pan4" alt="">
+                    <div class="p-4  Pan" draggable="true">
+                        <img src="./img/un-pan.png" id="pan1" class='compra pan' alt="">
+                        <img src="./img/un-pan.png" id="pan2" class='compra pan' alt="">
+                        <img src="./img/un-pan.png" id="pan3" class='compra pan' alt="">
+                        <img src="./img/un-pan.png" id="pan4" class='compra pan' alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4  ZumoNaranja">
-                        <img src="./img/ZumoNaranja.png" id="zumoNaranja1" alt="">
-                        <img src="./img/ZumoNaranja.png" id="zumoNaranja2" alt="">
-                        <img src="./img/ZumoNaranja.png" id="zumoNaranja3" alt="">
-                        <img src="./img/ZumoNaranja.png" id="zumoNaranja4" alt="">
+                    <div class="p-4  ZumoNaranja" draggable="true">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja1" class='compra zumoNaranja'  alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja2" class='compra zumoNaranja' alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja3" class='compra zumoNaranja'  alt="">
+                        <img src="./img/ZumoNaranja.png" id="zumoNaranja4" class='compra zumoNaranja' alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4  Snack">
-                        <img src="./img/snack.png" id="snack1" alt="">
-                        <img src="./img/snack.png" id="snack2" alt="">
-                        <img src="./img/snack.png" id="snack3" alt="">
-                        <img src="./img/snack.png" id="snack4" alt="">
+                    <div class="p-4  Snack" draggable="true">
+                        <img src="./img/snack.png" id="snack1" class='compra  snack' alt="">
+                        <img src="./img/snack.png" id="snack2" class='compra  snack' alt="">
+                        <img src="./img/snack.png" id="snack3" class='compra  snack' alt="">
+                        <img src="./img/snack.png" id="snack4" class='compra  snack' alt="">
                     </div>
                   </div>
                   <div class="col">
-                    <div class="p-4  Tomato"> 
-                    <img src="./img/tomato.png" id="tomato1" alt="">
-                    <img src="./img/tomato.png" id="tomato2" alt="">
-                    <img src="./img/tomato.png" id="tomato3" alt="">
-                    <img src="./img/tomato.png" id="tomato4" alt="">
-                    <img src="./img/tomato.png" id="tomato5" alt="">
+                    <div class="p-4  Tomato" draggable="true"> 
+                    <img src="./img/tomato.png" id="tomato1" class='compra tomato' alt="">
+                    <img src="./img/tomato.png" id="tomato2" class='compra tomato' alt="">
+                    <img src="./img/tomato.png" id="tomato3" class='compra tomato' alt="">
+                    <img src="./img/tomato.png" id="tomato4" class='compra tomato' alt="">
+                    <img src="./img/tomato.png" id="tomato5" class='compra tomato' alt="">
                     </div>
                     <img src="./img/caja de madera (1).png"  id="cajaM1" alt="">
                   </div>
 
 
                   <div class="col">
-                    <div class="p-4 Lechuga">
-                        <img src="./img/lechuga.png" id="lechuga1" alt="">
-                        <img src="./img/lechuga.png" id="lechuga2" alt="">
-                        <img src="./img/lechuga.png" id="lechuga3" alt="">
-                        <img src="./img/lechuga.png" id="lechuga4"alt="">
-                        <img src="./img/lechuga.png" id="lechuga5"alt="">
+                    <div class="p-4 Lechuga" draggable="true">
+                        <img src="./img/lechuga.png" id="lechuga1" class='compra  lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga2" class='compra  lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga3" class='compra  lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga4" class='compra  lechuga'  alt="">
+                        <img src="./img/lechuga.png" id="lechuga5" class='compra  lechuga'  alt="">
                     </div>
                     <img src="./img/caja de madera (1).png" id="cajaM2" alt="">
                   </div>
 
 
                   <div class="col">
-                    <div class="p-4  Berenjena">
-                     <img src=".//img/eggplant.png" id="berenjena1" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena2" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena3" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena4" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena5" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena6" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena6" alt="">
-                     <img src=".//img/eggplant.png" id="berenjena7" alt="">
+                    <div class="p-4  Berenjena" draggable="true">
+                     <img src=".//img/eggplant.png" id="berenjena1" class='compra berenjena'  alt="">
+                     <img src=".//img/eggplant.png" id="berenjena2" class='compra berenjena' alt="">
+                     <img src=".//img/eggplant.png" id="berenjena3" class='compra berenjena' alt="">
+                     <img src=".//img/eggplant.png" id="berenjena4" class='compra berenjena' alt="">
+                     <img src=".//img/eggplant.png" id="berenjena5" class='compra berenjena' alt="">
+                     <img src=".//img/eggplant.png" id="berenjena6" class='compra berenjena' alt="">
+                     <img src=".//img/eggplant.png" id="berenjena6" class='compra berenjena' alt="">
+                     <img src=".//img/eggplant.png" id="berenjena7" class='compra berenjena' alt="">
                     </div>
                     <img src="./img/caja de madera (1).png" id="cajaM3" alt="">
                   </div>
 
                   <div class="col">
-                    <div class="p-4 border Platano">
-                    <img src="./img/platano (1).png" id="platano1" alt="">
-                    <img src="./img/platano (1).png" id="platano2" alt="">
-                    <img src="./img/platano (1).png" id="platano3" alt="">
-                    <img src="./img/platano (1).png" id="platano4" alt="">
-                    <img src="./img/platano (1).png" id="platano5" alt="">
+                    <div class="p-4 border Platano" draggable="true">
+                    <img src="./img/platano (1).png" id="platano1" class='compra platano' alt="">
+                    <img src="./img/platano (1).png" id="platano2" class='compra platano' alt="">
+                    <img src="./img/platano (1).png" id="platano3" class='compra platano' alt="">
+                    <img src="./img/platano (1).png" id="platano4" class='compra platano' alt="">
+                    <img src="./img/platano (1).png" id="platano5" class='compra platano' alt="">
 
                     </div>
                     <img src="./img/caja de madera (1).png" id="cajaM4" alt="">
                   </div>
+              </div>
+
+
+              <div class="container-sm" id="contenedorCarrito" ondrop="drop(event)" ondragover="allowDrop(event, this)" ondrop="getID(this, ev)" >
+              
+              </div>
+
+              <div class="container-sm" id="sumaDePrecios">
+                <p id='total'>€</p>
+
               </div>
 
 
